Eclipse1/SalesforceCI/ Enterprise/objects/Course_Activity__c.object
<CustomObject>
    <description>An activity upon a course or a course in a curriculum.</description>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <description>The certificate number (if applicable) should a user pass the course.</description>
        <label>Certificate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectID__c</fullName>
        <description>The ID value of this piece of content in the external system which hosts it.</description>
        <label>Source ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <description>The name of the content this activity was on. Mostly useful for curriculums to know which specific curriculum content the activity was on.</description>
        <label>Content Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <label>Date Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Score achieved on this attempt.</description>
        <label>Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this activity (if applicable):  incomplete, user-failed, user-passed, review, not-attempted, etc.</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <description>The training course this activity is from.</description>
        <label>Training Course</label>
        <referenceTo>TYS_TrainingCourse__c</referenceTo>
        <relationshipLabel>Course Activities</relationshipLabel>
        <relationshipName>Course_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transcript_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Transcript ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User which this activity belongs to.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course Activity</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Course Activities ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>